[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Lucida.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Menu/Rock_Texture.png" type="Texture" id=3]
[ext_resource path="res://Fonts/BASKVILL.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/Menu/Mammoths.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=7]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 30
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=11]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="DynamicFont" id=2]
size = 30
outline_color = Color( 0.12549, 0.0156863, 0.0156863, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="WallSprite" type="Sprite" parent="."]
position = Vector2( 690, 412 )
scale = Vector2( 1.3457, 1.60547 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 512 )

[node name="Mammoths" type="Sprite" parent="."]
position = Vector2( 708, 395 )
scale = Vector2( 2.51537, 2.397 )
texture = ExtResource( 5 )

[node name="RichTextLabel" type="Label" parent="."]
margin_left = 546.0
margin_top = 39.0
margin_right = 834.0
margin_bottom = 345.0
custom_colors/font_color = Color( 0.145098, 0.121569, 0.121569, 1 )
custom_fonts/font = SubResource( 7 )
text = "The Stone Age"
align = 1
valign = 1
autowrap = true

[node name="BtnControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Start" type="Button" parent="BtnControl"]
margin_left = 592.0
margin_top = 450.0
margin_right = 792.0
margin_bottom = 510.0
custom_colors/font_color = Color( 0.196078, 0.14902, 0.14902, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Iniciar"

[node name="Options" type="Button" parent="BtnControl"]
margin_left = 590.0
margin_top = 516.0
margin_right = 790.0
margin_bottom = 576.0
custom_colors/font_color = Color( 0.168627, 0.145098, 0.145098, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 10 )
custom_styles/normal = SubResource( 9 )
text = "Opciones"

[node name="Credits" type="Button" parent="BtnControl"]
margin_left = 590.0
margin_top = 584.0
margin_right = 790.0
margin_bottom = 644.0
custom_colors/font_color = Color( 0.152941, 0.133333, 0.133333, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Cr√©ditos"

[node name="Quit" type="Button" parent="BtnControl"]
margin_left = 594.0
margin_top = 651.0
margin_right = 794.0
margin_bottom = 711.0
custom_colors/font_color = Color( 0.196078, 0.14902, 0.14902, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
text = "Salir"

[connection signal="mouse_entered" from="BtnControl/Start" to="." method="_on_Start_mouse_entered"]
[connection signal="pressed" from="BtnControl/Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="BtnControl/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="pressed" from="BtnControl/Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="BtnControl/Credits" to="." method="_on_Credits_mouse_entered"]
[connection signal="pressed" from="BtnControl/Credits" to="." method="_on_Credits_pressed"]
[connection signal="mouse_entered" from="BtnControl/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="pressed" from="BtnControl/Quit" to="." method="_on_Quit_pressed"]
